# django-async-pytest-example

./: .gitignore  README.md  manage.py  pyproject.toml
app/django_models/person/: models.py
app/settings/: base.py
tests/: test_db.py  test_db_sync.py  test_task.py
