[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jordna Garside <jordangarside@gmail.com>"]

[tool.poetry.dependencies]
Django = "==3.0"
poetry = "^1.0.5"
psycopg2-binary = "==2.8.5"
python = "3.8.2"

[tool.poetry.dev-dependencies]
black = "==19.10b0"
poetry = "^1.0.10"
pytest = "==5.3.5"
pytest-asyncio = "==0.10.0"
pytest-django = "==3.9.0"
pytest-sugar = "==0.9.2"

[[tool.poetry.source]]
name = "public"
url = "https://pypi.org/simple"
secondary = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

